se acomodaron las formulas y funciones de FIGURAS.HTML.

--- a/Figuras/FIGURAS.HTML
+++ b/Figuras/FIGURAS.HTML
@@ -42,24 +42,14 @@
         <h2> Calcular el perimetro y area de un Triangulo </h2>
         <form>
             <label for="InputTriangulo1">
-                Escribe cuanto mide un lado de tu Triangulo.
+                Escribe cuanto miden los lados de tu Triangulo.
             </label>
             <input type="number" id="InputTriangulo1">
-            
-            <label for="InputTriangulo2">
-                Escribe cuanto mide otro lado de tu Triangulo.
-            </label>
-            <input type="number" id="InputTriangulo2">
 
             <label for="InputTrianguloBase">
                 Escribe cuanto mide la base de tu Triangulo.
             </label>
             <input type="number" id="InputTrianguloBase">
-
-            <label for="InputTrianguloAltura">
-                Escribe cuanto mide la altura de tu Triangulo.
-            </label>
-            <input type="number" id="InputTrianguloAltura">
 
             <button type="button" onclick="calcularPerimetroTriangulo()"> 
                 Calcular el perimetro 
