Se añadio el codigo de descuentos al de figuras

--- a/Figuras/FIGURAS.HTML
+++ b/Figuras/FIGURAS.HTML
@@ -14,7 +14,7 @@
         </h1>
         <p>Primer taller basico de JS con Platzi</p>
     </header>
-
+<!-- SECCION DE FIGURAS . 1 -->
 <section id="main-container">
 <!-- CUADRADO -->
     <section id="Cuadrado" class="box">
@@ -90,7 +90,32 @@
 </section>
 <!-- CIRCULO -->
 </section>
+<!-- SECCION DE FIGURAS . 1 -->
 
+<!-- SECCION DE DESCUENTOS . 2 -->
+<section id="Discount-container">
+    <h2> Porcentajes y descuentos. </h2>
+    <h2> Calcula el precio a pagar de tus productos con descuentos </h2>
+        <form>
+            <label for="InputPrice"> Escribe el precio de tu producto: </label>
+            <input type="number" id="InputPrice">
+
+            <label for="InputDiscount"> Escribe el descuento de tu producto: </label>
+            <input type="number" id="InputDiscount">
+            
+            <button type="button" onclick="onClickButtonPriceDiscount()"> 
+                Calcular el precio con descuento
+            </button>
+
+            <p id="ResultP"></p>
+        </form>
+</section>
+<!-- SECCION DE DESCUENTOS . 2 -->
+
+<!-- SECCION DE PROMEDIO . 3 -->
+
+<!-- SECCION DE PROMEDIO . 3 -->
 <script src="./FIGURAS.JS"></script>
+<script src="./Descuentos.JS"></script>
 </body>
 </html>
